apps/gcp/tekton-dev/ingress/http-routes.yaml
# Ref: https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tekton
  namespace: apps-dev
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: apps-dev
  hostnames:
    - "${DOMAIN_NAME}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "${PATH_FOR_HOOK}(/|$)(.*)"
      backendRefs:
        - name: el-trigger-groups-listener
          namespace: ee-cd
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /$2
    - matches:
        - path:
            type: PathPrefix
            value: "${PATH_FOR_DASHBOARD}(/|$)(.*)"
      backendRefs:
        - name: tekton-dashboard
          namespace: tekton-pipelines
          port: 9097
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /$2
